--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:34px;
+        font-size:32px;
         }
 	.dot {
   height: 8px;
@@ -55,15 +55,17 @@
  <div ><img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;"></div>
   
    <p><b style = "font-size:22px;"> About me: </b></p>
-   <p style = "color: rgb(33,97,140); font-size:20px; ">Religion: 
-   <p style="padding-left:1em;"> Christianity</p>
-   <p style = "color: rgb(33,97,140);font-size:20px; ">Birthday: 
-   <p style="padding-left:1em"> July 6, 1998</p>
-   <p style = "color: rgb(33,97,140);font-size:20px;">Zodiac: 
-   <p style="padding-left:1em"> Cancer</p>
-   <p style = "color: rgb(33,97,140);font-size:20px;">College: 
-   <p style="padding-left:1em"> University At Buffalo</p>
+   <p style = "color: rgb(33,97,140); font-size:21px; ">Religion: 
+   <p style="padding-left:1em;font-size:20px;"> Christianity</p>
+   <p style = "color: rgb(33,97,140);font-size:21px; ">Birthday: 
+   <p style="padding-left:1em;font-size:20px;"> July 6, 1998</p>
+   <p style = "color: rgb(33,97,140);font-size:21px;">Zodiac: 
+   <p style="padding-left:1em;font-size:20px;"> Cancer</p>
+   <p style = "color: rgb(33,97,140);font-size:21px;">College: 
+   <p style="padding-left:1em;font-size:20px;"> University At Buffalo</p>
+   
    </div>
+   <br/>
    <div class="absolute" style="position:absolute; top:60px; left: 160px; max-width:380px">
    <p1> Wenqian Zhao</p1>
   <br/>
