--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
    <p style="padding-left:1em;font-size:20px;"> Cancer</p>
    <p style = "color: rgb(33,97,140);font-size:21px;">College: 
    <p style="padding-left:1em;font-size:20px;"> University At Buffalo</p>
-   
+   <p style="border-bottom: solid;
+    border-bottom-color: rgb(21,7,96);"></p>
    </div>
    
    <div class="absolute" style="position:absolute; top:60px; left: 160px; max-width:380px">
