--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@
    <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
    </div>
    
-	<div class="slideshow-container"style="margin-left:180px; margin-top:220px; max-width:1000px;max-height:860px; ">
+	<div class="slideshow-container"style="margin-left:180px; margin-top:180px; max-width:1000px;max-height:860px; ">
      <p style="text-align:center"><b>  December 9, 2016 - Baptism </b>
    <p style="text-align:center"><b>  Location: </b>Amherst Baptist Church</p>
+   <p style="text-align:center"><b>  Organized by: </b>Tabernacle Campus Church(TCC)</p>
    <p style="text-align:center">A new beginning!!</p> 
    		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
@@ -102,14 +103,26 @@
  
 
 
-<div class="Photo"style="margin-left:40px; margin-top:60px; max-width:1100px; max-height:860px; ">
+<div class="Photo"style="margin-left:40px; margin-top:80px; max-width:1200px;  ">
 
 <p style="text-align:center"><b>  Septembere 9-11, 2016 - Camping </b>
    <p style="text-align:center"><b>  Location: </b>Lighthouse Christian Camp</p>
+   <p style="text-align:center"><b>  Organized by: </b>Tabernacle Campus Church(TCC)</p>
    <p style="text-align:center">The Entrance!</p>  
 	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/S.FCKFjWt.TIOJcTzPThtnDbibB4xwEqZ6bkwkGkHPE!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;" > 
-	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.4%;"> 
-<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;"> 
+   
+	<img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/ACTvl9YKR*n9BsQ6rARwAH.Z*NunInEozV6dISVNKsI!/b/dHoBAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;">
+    <img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/i*jit0s1QR*jT*IIiTdfavhOP6y76kJHO*hU08PxYIE!/b/dHoBAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;">
+    <img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3uxK4r6U3km27dzhmTe*nb77D10kLpHQ.Xa8zfXUI98!/b/dHcBAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;">
+     <img src ="http://a2.qpic.cn/psb?/V13GbYmt2DUsbb/TXF9CL4DYQzx61wt*GV8ba84kQKuUItS5QIUFxAI8qE!/b/dHkBAAAAAAAA&ek=1&kp=1&pt=0&bo=sASwBLAEsAQFByQ!&tm=1481770800&sce=60-1-1&rf=viewer_4" style="max-width:32.4%;" > 
+    <img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/7NjYa1l3CZZRUIK1DW7XyLnL8dcRdxVhrWcHePh3gi4!/b/dHkBAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.4%;">
+     
+      <img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/mxBYxApE2V9XRpTnSR6Z57Oxtgl*pcuYeqXBz3fD*lY!/b/dAoBAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.4%;"> 
+      <img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/3OH7m4J9e9p4AsffM3FjTss0U0Xyv83czQgKECwLpJc!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFByQ!&rf=viewer_4" style="max-width:32.4%;">
+      <img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;"> 
+       
+
+<br/>
 <br/>
     <p style="border-bottom: solid;
     border-bottom-color: rgb(21,7,96);"></p>
