--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
    <p style = "color: rgb(33,97,140);font-size:21px;">Zodiac: 
    <p style="padding-left:1em;font-size:20px;"> Cancer</p>
    <p style = "color: rgb(33,97,140);font-size:21px;">College: 
-   <p style="padding-left:1em;font-size:20px;border-bottom: solid;
-    border-bottom-color: rgb(21,7,96);"> University At Buffalo</p>
+   <p style="padding-left:1em;font-size:20px;"> University At Buffalo</p>
+    <p style="border-bottom: solid;
+    border-bottom-color: rgb(21,7,96);"> </p>
    </div>
    
    <div class="absolute" style="position:absolute; top:60px; left: 160px; max-width:380px">
@@ -122,7 +123,6 @@
       <img src ="http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/*7X64vI6bvn6hieWqXYwNUkRyNUSYsfZ17IwKxpVmKU!/b/dCABAAAAAAAA&bo=sASwBLAEsAQFACM!&rf=viewer_4" style="max-width:32.4%;"> 
        
 
-<br/>
 <br/>
     <p style="border-bottom: solid;
     border-bottom-color: rgb(21,7,96);"></p>
