--- a/index.html
+++ b/index.html
@@ -6,21 +6,22 @@
   </head>
   <style>
   .photo {
-    padding: 5px;
-    max-width: 340px;
+    padding-left:10px;
+    padding-top:5px;
+    max-width: 360px;
   	float: left;
+   
 } 
- 
 .picture {
   	float: top;
     margin-top:80px;
     margin-left: 230px;
-    max-width:1000px;
+    max-width:1200px;
 } 
 .pictures {
   	float: top;
     margin-top: 10px;
-    margin-left: 200px;
+    margin-left: 180px;
     max-width:1200px;
    
 } 
@@ -97,30 +98,44 @@
    </div>
    <div class="column"> 
  <div ><img src=" http://a1.qpic.cn/psb?/V13GbYmt2DUsbb/r22U07d7gqbJZ5PlowSVfQT1kkDL0sG1PSvIvHV8mYo!/b/dOQAAAAAAAAA&ek=1&kp=1&pt=0&bo=vQO.A70DvgMDByI!&tm=1481652000&sce=60-2-2&rf=viewer_4"  style="max-width:100%;"></div>
-   <p><b style = "font-size:22px;"> About me: </b></p>
-   <p style = "color: rgb(33,97,140); font-size:20px; ">Religion: 
-   <p style="padding-left:1em;"> Christianity</p>
+   <p><b style = "font-size:22px;"> About Me: </b></p>
    <p style = "color: rgb(33,97,140);font-size:20px; ">Birthday: 
    <p style="padding-left:1em;"> July 6, 1998</p>
+   <p style = "color: rgb(33,97,140);font-size:20px; ">Age: 
+   <p style="padding-left:1em;"> 18</p>
    <p style = "color: rgb(33,97,140);font-size:20px;">Zodiac: 
    <p style="padding-left:1em;"> Cancer</p>
+   <p style = "color: rgb(33,97,140); font-size:20px; ">Religion: 
+   <p style="padding-left:1em;"> Christianity</p>
+   <p style = "color: rgb(33,97,140);font-size:20px;">Favorite Activity: 
+   <p style="padding-left:1em;"> Sleep</p>
+   <p style="padding-left:1em;"> Coding</p>
    <p style = "color: rgb(33,97,140);font-size:20px;">College: 
    <p style="padding-left:1em;"> University At Buffalo</p>
+   <p style = "color: rgb(33,97,140);font-size:20px;">Courses Taking: 
+   <p style="padding-left:1em;"> CSE 115</p>
+   <p style="padding-left:1em;"> CSE 199</p>
+   <p style="padding-left:1em;"> MAT 241</p>
+   <p style="padding-left:1em;"> ARC 121</p>
     <p style="border-bottom: solid;
     border-bottom-color: rgb(21,7,96);"> </p>
    </div>
 	<div class="picture">
+    
      <p style="text-align:center"><b>  December 9, 2016 - Baptism </b>
    <p style="text-align:center"><b>  Location: </b>Amherst Baptist Church</p>
    <p style="text-align:center"><b>  Organized by: </b>Tabernacle Campus Church(TCC)</p>
    <p style="text-align:center">A new beginning!!</p>
-   		<div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
+   <br/>
+   <p style="border-top: solid;
+    border-top-color: rgb(21,7,96);"></p>
+   		<div class="mySlides fade" style=" padding-left: 30px;padding-right: 30px;"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/AFa4qsJWmWf1Q0O6uMgOHnOnUTLHN5pqK7S8cfVJRCs!/b/dB8BAAAAAAAA&bo=CAewBAgHsAQFByQ!&rf=viewer_4" style="width:100%"> 
   </div>
   
-  	 <div class="mySlides fade"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
+  	 <div class="mySlides fade" style=" padding-left: 30px;padding-right: 30px;"><img src ="https://scontent-lga3-1.xx.fbcdn.net/v/t31.0-8/15391475_1839772842929702_2275733727368066275_o.jpg?oh=58dc8e5f9055180c4f8487fe79793060&oe=58E57823" style="width:100%">
    </div> 
    
- 	  <div class="mySlides fade"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:100%"> 
+ 	  <div class="mySlides fade" style=" padding-left: 30px;padding-right: 30px;"><img src ="http://a3.qpic.cn/psb?/V13GbYmt2DUsbb/EhAksm0MpKZvC7*ivmhjX4iLUmZoVg8TWyGl52lsNZA!/b/dB8BAAAAAAAA&bo=wgaABMIGgAQFByQ!&rf=viewer_4" style="width:100%"> 
    </div> 
 		<div style="text-align:center">
  		 <span class="dot"></span> 
