--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
   	float: left;
    
 } 
-.picture {
-  	float: top;
-    margin-top:80px;
-    margin-left: 230px;
-    max-width:1200px;
-} 
 .pictures {
   	float: top;
     margin-top: 10px;
@@ -120,8 +114,8 @@
     <p style="border-bottom: solid;
     border-bottom-color: rgb(21,7,96);"> </p>
    </div>
-	<div class="picture">
-    
+	<div class="pictures">
+    <br/><br/>
      <p style="text-align:center"><b>  December 9, 2016 - Baptism </b>
    <p style="text-align:center"><b>  Location: </b>Amherst Baptist Church</p>
    <p style="text-align:center"><b>  Organized by: </b>Tabernacle Campus Church(TCC)</p>
