--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     p1 {
       color: rgb(33,97,140);
         font-family: sans-serif;
-        font-size:40px;
+        font-size:47px;
         }
 	.dot {
   height: 8px;
@@ -83,11 +83,11 @@
     border-bottom-color: rgb(21,7,96);"> </p>
    <p1 > &nbsp;&nbsp;Wenqian Zhao</p1>
   <br/>
-   &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); max-font-size: 20px;" ></i></a>  &nbsp; • &nbsp;
-  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); max-font-size:20px;"></i></a> &nbsp;  • &nbsp;
-   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a>  &nbsp; • &nbsp;
-   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); max-font-size: 20px;"></i></a> 
+  &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;<a href="https://www.facebook.com/Wenqianzhao"><i class="fa fa-facebook-official" style="color: rgb(33,97,140); font-size: 22px;" ></i></a>  &nbsp; • &nbsp;
+  <a href="mailto:wenqianz98@gmail.com?Subject=Hello"><i class="fa fa-envelope" style="color: rgb(33,97,140); font-size:22px;"></i></a> &nbsp;  • &nbsp;
+   <a href="https://github.com/wenqianz"><i class="fa fa-github" style="color: rgb(33,97,140); font-size: 22px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.instagram.com/wenqian_8/"><i class="fa fa-instagram" style="color: rgb(33,97,140); font-size: 22px;"></i></a>  &nbsp; • &nbsp;
+   <a href="https://www.snapchat.com/add/wenqianz"><i class="fa fa-snapchat" style="color: rgb(33,97,140); font-size: 22px;"></i></a> 
     <p > </p>
    </div>
    <div class="column"> 
